--- a/UnitTests/TestBeamScheme.fpcunit.ini
+++ b/UnitTests/TestBeamScheme.fpcunit.ini
@@ -5,7 +5,7 @@ Width=575
 Height=663
 
 [Tests]
-All Tests.Checked=1
+All Tests.Checked=0
 All Tests.Expanded=1
 Test1DParamFuncs.Checked=1
 Test1DParamFuncs.Expanded=1
@@ -125,8 +125,16 @@ Test1DParamFuncs.TestFlatnessCAX1D.Checked=1
 Test1DParamFuncs.TestFlatnessCAX1D.Expanded=0
 Test1DParamFuncs.TestUniformityAve1D.Checked=1
 Test1DParamFuncs.TestUniformityAve1D.Expanded=0
+Test1DParamFuncs.TestUniformityDiff1D.Checked=1
+Test1DParamFuncs.TestUniformityDiff1D.Expanded=0
 Test1DParamFuncs.TestFlatness90501D.Checked=1
 Test1DParamFuncs.TestFlatness90501D.Expanded=0
+Test1DParamFuncs.TestPeakSlopeLeft1D.Checked=1
+Test1DParamFuncs.TestPeakSlopeLeft1D.Expanded=0
+Test1DParamFuncs.TestPeakSlopeRight1D.Checked=1
+Test1DParamFuncs.TestPeakSlopeRight1D.Expanded=0
+Test1DParamFuncs.TestPeakSlopeRatio1D.Checked=1
+Test1DParamFuncs.TestPeakSlopeRatio1D.Expanded=0
 Test1DParamFuncs.TestSymmetryRatio1D.Checked=1
 Test1DParamFuncs.TestSymmetryRatio1D.Expanded=0
 Test1DParamFuncs.TestSymmetryDiff1D.Checked=1
@@ -137,138 +145,142 @@ Test1DParamFuncs.TestSymmetryArea1D_Even.Checked=1
 Test1DParamFuncs.TestSymmetryArea1D_Even.Expanded=0
 Test1DParamFuncs.TestDeviationRatio1D.Checked=1
 Test1DParamFuncs.TestDeviationRatio1D.Expanded=0
-Test1DParamFuncs.TestDeviationDiff1D.Checked=1
-Test1DParamFuncs.TestDeviationDiff1D.Expanded=0
 Test1DParamFuncs.TestDeviationCAX1D.Checked=1
 Test1DParamFuncs.TestDeviationCAX1D.Expanded=0
 Test1DParamFuncs.TestNoFunc1D.Checked=1
 Test1DParamFuncs.TestNoFunc1D.Expanded=0
-TestSingleProfile.Checked=1
-TestSingleProfile.Expanded=1
-TestSingleProfile.TestGetCentre_odd.Checked=1
+TestSingleProfile.Checked=0
+TestSingleProfile.Expanded=0
+TestSingleProfile.TestGetCentre_odd.Checked=0
 TestSingleProfile.TestGetCentre_odd.Expanded=0
-TestSingleProfile.TestGetCentre_even.Checked=1
+TestSingleProfile.TestGetCentre_even.Checked=0
 TestSingleProfile.TestGetCentre_even.Expanded=0
-TestSingleProfile.TestLeftEdge.Checked=1
+TestSingleProfile.TestLeftEdge.Checked=0
 TestSingleProfile.TestLeftEdge.Expanded=0
-TestSingleProfile.TestRightEdge.Checked=1
+TestSingleProfile.TestRightEdge.Checked=0
 TestSingleProfile.TestRightEdge.Expanded=0
-TestSingleProfile.TestLeftEdge_Limits.Checked=1
+TestSingleProfile.TestLeftEdge_Limits.Checked=0
 TestSingleProfile.TestLeftEdge_Limits.Expanded=0
-TestSingleProfile.TestRightEdge_Limits.Checked=1
+TestSingleProfile.TestRightEdge_Limits.Checked=0
 TestSingleProfile.TestRightEdge_Limits.Expanded=0
-TestSingleProfile.TestMin.Checked=1
+TestSingleProfile.TestMin.Checked=0
 TestSingleProfile.TestMin.Expanded=0
-TestSingleProfile.TestMax.Checked=1
+TestSingleProfile.TestMax.Checked=0
 TestSingleProfile.TestMax.Expanded=0
-TestSingleProfile.TestAve.Checked=1
+TestSingleProfile.TestAve.Checked=0
 TestSingleProfile.TestAve.Expanded=0
-TestSingleProfile.TestMaxDiff.Checked=1
+TestSingleProfile.TestMaxDiff.Checked=0
 TestSingleProfile.TestMaxDiff.Expanded=0
-TestSingleProfile.TestPeakFWHM.Checked=1
+TestSingleProfile.TestSlope.Checked=0
+TestSingleProfile.TestSlope.Expanded=0
+TestSingleProfile.TestPeakFWHM.Checked=0
 TestSingleProfile.TestPeakFWHM.Expanded=0
-TestSingleProfile.TestArea.Checked=1
+TestSingleProfile.TestArea.Checked=0
 TestSingleProfile.TestArea.Expanded=0
-TestSingleProfile.TestLeftDiff.Checked=1
+TestSingleProfile.TestLeftDiff.Checked=0
 TestSingleProfile.TestLeftDiff.Expanded=0
-TestSingleProfile.TestRightDiff.Checked=1
+TestSingleProfile.TestRightDiff.Checked=0
 TestSingleProfile.TestRightDiff.Expanded=0
-TestSingleProfile.TestPeakDiff.Checked=1
+TestSingleProfile.TestPeakDiff.Checked=0
 TestSingleProfile.TestPeakDiff.Expanded=0
-TestSingleProfile.TestHPLeft.Checked=1
+TestSingleProfile.TestHPLeft.Checked=0
 TestSingleProfile.TestHPLeft.Expanded=0
-TestSingleProfile.TestHPRight.Checked=1
+TestSingleProfile.TestHPRight.Checked=0
 TestSingleProfile.TestHPRight.Expanded=0
-TestSingleProfile.TestLeftInfl.Checked=1
+TestSingleProfile.TestLeftInfl.Checked=0
 TestSingleProfile.TestLeftInfl.Expanded=0
-TestSingleProfile.TestRightInfl.Checked=1
+TestSingleProfile.TestRightInfl.Checked=0
 TestSingleProfile.TestRightInfl.Expanded=0
-TestSingleProfile.TestPeakInfl.Checked=1
+TestSingleProfile.TestPeakInfl.Checked=0
 TestSingleProfile.TestPeakInfl.Expanded=0
-TestSingleProfile.TestGetRelPosValue0_Left.Checked=1
+TestSingleProfile.TestGetRelPosValue0_Left.Checked=0
 TestSingleProfile.TestGetRelPosValue0_Left.Expanded=0
-TestSingleProfile.TestGetRelPosValue0_Right.Checked=1
+TestSingleProfile.TestGetRelPosValue0_Right.Checked=0
 TestSingleProfile.TestGetRelPosValue0_Right.Expanded=0
-TestSingleProfile.TestGetRelPosValueFWHM_Left.Checked=1
+TestSingleProfile.TestGetRelPosValueFWHM_Left.Checked=0
 TestSingleProfile.TestGetRelPosValueFWHM_Left.Expanded=0
-TestSingleProfile.TestGetRelPosValueFWHM_Right.Checked=1
+TestSingleProfile.TestGetRelPosValueFWHM_Right.Checked=0
 TestSingleProfile.TestGetRelPosValueFWHM_Right.Expanded=0
-TestSingleProfile.TestGetRelPosValueInfl_Left.Checked=1
+TestSingleProfile.TestGetRelPosValueInfl_Left.Checked=0
 TestSingleProfile.TestGetRelPosValueInfl_Left.Expanded=0
-TestSingleProfile.TestGetRelPosValueInfl_Right.Checked=1
+TestSingleProfile.TestGetRelPosValueInfl_Right.Checked=0
 TestSingleProfile.TestGetRelPosValueInfl_Right.Expanded=0
-TestSingleProfile.TestGetRelPosValueDiff_Left.Checked=1
+TestSingleProfile.TestGetRelPosValueDiff_Left.Checked=0
 TestSingleProfile.TestGetRelPosValueDiff_Left.Expanded=0
-TestSingleProfile.TestGetRelPosValueDiff_Right.Checked=1
+TestSingleProfile.TestGetRelPosValueDiff_Right.Checked=0
 TestSingleProfile.TestGetRelPosValueDiff_Right.Expanded=0
-TestSingleProfile.TestNormalise_none.Checked=1
+TestSingleProfile.TestNormalise_none.Checked=0
 TestSingleProfile.TestNormalise_none.Expanded=0
-TestSingleProfile.TestNormalise_cax.Checked=1
+TestSingleProfile.TestNormalise_cax.Checked=0
 TestSingleProfile.TestNormalise_cax.Expanded=0
-TestSingleProfile.TestNormalise_max.Checked=1
+TestSingleProfile.TestNormalise_max.Checked=0
 TestSingleProfile.TestNormalise_max.Expanded=0
-TestSingleProfile.TestTop.Checked=1
+TestSingleProfile.TestTop.Checked=0
 TestSingleProfile.TestTop.Expanded=0
-TestBeam.Checked=1
+TestSingleProfile.TestPeakLSlope.Checked=0
+TestSingleProfile.TestPeakLSlope.Expanded=0
+TestSingleProfile.TestPeakRSlope.Checked=0
+TestSingleProfile.TestPeakRSlope.Expanded=0
+TestBeam.Checked=0
 TestBeam.Expanded=0
-TestBeam.TestCentre_RowOddCollOdd.Checked=1
+TestBeam.TestCentre_RowOddCollOdd.Checked=0
 TestBeam.TestCentre_RowOddCollOdd.Expanded=0
-TestBeam.TestCentre_RowOddCollEven.Checked=1
+TestBeam.TestCentre_RowOddCollEven.Checked=0
 TestBeam.TestCentre_RowOddCollEven.Expanded=0
-TestBeam.TestCentre_RowEvenCollOdd.Checked=1
+TestBeam.TestCentre_RowEvenCollOdd.Checked=0
 TestBeam.TestCentre_RowEvenCollOdd.Expanded=0
-TestBeam.TestCentre_RowEvenCollEven.Checked=1
+TestBeam.TestCentre_RowEvenCollEven.Checked=0
 TestBeam.TestCentre_RowEvenCollEven.Expanded=0
-TestBeam.TestCoM.Checked=1
+TestBeam.TestCoM.Checked=0
 TestBeam.TestCoM.Expanded=0
-TestBeam.TestMin.Checked=1
+TestBeam.TestMin.Checked=0
 TestBeam.TestMin.Expanded=0
-TestBeam.TestMax.Checked=1
+TestBeam.TestMax.Checked=0
 TestBeam.TestMax.Expanded=0
-TestBeam.TestAve.Checked=1
+TestBeam.TestAve.Checked=0
 TestBeam.TestAve.Expanded=0
-TestBeam.TestInvert.Checked=1
+TestBeam.TestInvert.Checked=0
 TestBeam.TestInvert.Expanded=0
-TestBeam.TestRescale.Checked=1
+TestBeam.TestRescale.Checked=0
 TestBeam.TestRescale.Expanded=0
-TestBeam.TestCentre.Checked=1
+TestBeam.TestCentre.Checked=0
 TestBeam.TestCentre.Expanded=0
-TestBeam.TestCreateXProfile.Checked=1
+TestBeam.TestCreateXProfile.Checked=0
 TestBeam.TestCreateXProfile.Expanded=0
-TestBeam.TestCreateYProfile.Checked=1
+TestBeam.TestCreateYProfile.Checked=0
 TestBeam.TestCreateYProfile.Expanded=0
-TestBeam.TestCreateOffsetProfile.Checked=1
+TestBeam.TestCreateOffsetProfile.Checked=0
 TestBeam.TestCreateOffsetProfile.Expanded=0
-TestBeam.TestCreateDiagonalProfile.Checked=1
+TestBeam.TestCreateDiagonalProfile.Checked=0
 TestBeam.TestCreateDiagonalProfile.Expanded=0
-TestBeam.TestCreateWideProfile.Checked=1
+TestBeam.TestCreateWideProfile.Checked=0
 TestBeam.TestCreateWideProfile.Expanded=0
-TestBeam.TestCreateDiagonalOffsetWideProfile.Checked=1
+TestBeam.TestCreateDiagonalOffsetWideProfile.Checked=0
 TestBeam.TestCreateDiagonalOffsetWideProfile.Expanded=0
-TTestImport.Checked=1
+TTestImport.Checked=0
 TTestImport.Expanded=0
-TTestImport.TestMapCheckOpen.Checked=1
+TTestImport.TestMapCheckOpen.Checked=0
 TTestImport.TestMapCheckOpen.Expanded=0
-TTestImport.TestMapCheckOpen_14_Feb_2008_A.Checked=1
+TTestImport.TestMapCheckOpen_14_Feb_2008_A.Checked=0
 TTestImport.TestMapCheckOpen_14_Feb_2008_A.Expanded=0
-TTestImport.TestDICOMOpen.Checked=1
+TTestImport.TestDICOMOpen.Checked=0
 TTestImport.TestDICOMOpen.Expanded=0
-TTestImport.TestDICOMOpen_RD.Checked=1
+TTestImport.TestDICOMOpen_RD.Checked=0
 TTestImport.TestDICOMOpen_RD.Expanded=0
-TTestImport.TestIBAOpen.Checked=1
+TTestImport.TestIBAOpen.Checked=0
 TTestImport.TestIBAOpen.Expanded=0
-TTestImport.TestPTWOpen.Checked=1
+TTestImport.TestPTWOpen.Checked=0
 TTestImport.TestPTWOpen.Expanded=0
-TTestImport.TestXIOOpen.Checked=1
+TTestImport.TestXIOOpen.Checked=0
 TTestImport.TestXIOOpen.Expanded=0
-TTestImport.TestBrainLabOpen.Checked=1
+TTestImport.TestBrainLabOpen.Checked=0
 TTestImport.TestBrainLabOpen.Expanded=0
-TTestImport.TestBMPOpen.Checked=1
+TTestImport.TestBMPOpen.Checked=0
 TTestImport.TestBMPOpen.Expanded=0
-TTestImport.TestRAWOpen.Checked=1
+TTestImport.TestRAWOpen.Checked=0
 TTestImport.TestRAWOpen.Expanded=0
 Test2DParamFuncs.Checked=1
-Test2DParamFuncs.Expanded=0
+Test2DParamFuncs.Expanded=1
 Test2DParamFuncs.TestCaxVal2D_no_norm.Checked=1
 Test2DParamFuncs.TestCaxVal2D_no_norm.Expanded=0
 Test2DParamFuncs.TestCaxVal2D_norm_cax.Checked=1
@@ -317,65 +329,93 @@ Test2DParamFuncs.TestXSize2D.Checked=1
 Test2DParamFuncs.TestXSize2D.Expanded=0
 Test2DParamFuncs.TestYSize2D.Checked=1
 Test2DParamFuncs.TestYSize2D.Expanded=0
-TestProtocolSNC.Checked=1
+TestProtocolSNC.Checked=0
 TestProtocolSNC.Expanded=1
-TestProtocolSNC.TestProtocolAll.Checked=1
+TestProtocolSNC.TestProtocolAll.Checked=0
 TestProtocolSNC.TestProtocolAll.Expanded=0
-TestProtocolSNC.TestProtocolVarian.Checked=1
+TestProtocolSNC.TestProtocolVarian.Checked=0
 TestProtocolSNC.TestProtocolVarian.Expanded=0
-TestProtocolPTW.Checked=1
-TestProtocolPTW.Expanded=1
-TestProtocolPTW.TestProtocolVarian.Checked=1
+TestProtocolPTW.Checked=0
+TestProtocolPTW.Expanded=0
+TestProtocolPTW.TestProtocolVarian.Checked=0
 TestProtocolPTW.TestProtocolVarian.Expanded=0
-TestProtocolPTW.TestProtocolSiemens.Checked=1
+TestProtocolPTW.TestProtocolSiemens.Checked=0
 TestProtocolPTW.TestProtocolSiemens.Expanded=0
-TestProtocolPTW.TestProtocolElekta.Checked=1
+TestProtocolPTW.TestProtocolElekta.Checked=0
 TestProtocolPTW.TestProtocolElekta.Expanded=0
-TestProtocolPTW.TestProtocolAFSSAPS.Checked=1
+TestProtocolPTW.TestProtocolAFSSAPS.Checked=0
 TestProtocolPTW.TestProtocolAFSSAPS.Expanded=0
-TestProtocolPTW.TestProtocolIEC.Checked=1
+TestProtocolPTW.TestProtocolIEC.Checked=0
 TestProtocolPTW.TestProtocolIEC.Expanded=0
-TestProtocolPTW.TestProtocolWFF.Checked=1
+TestProtocolPTW.TestProtocolWFF.Checked=0
 TestProtocolPTW.TestProtocolWFF.Expanded=0
-TestProtocolIBA.Checked=1
+TestProtocolIBA.Checked=0
 TestProtocolIBA.Expanded=1
-TestProtocolIBA.TestProtocolVarian.Checked=1
+TestProtocolIBA.TestProtocolVarian.Checked=0
 TestProtocolIBA.TestProtocolVarian.Expanded=0
-TestProtocolIBA.TestProtocolSiemens.Checked=1
+TestProtocolIBA.TestProtocolSiemens.Checked=0
 TestProtocolIBA.TestProtocolSiemens.Expanded=0
-TestProtocolIBA.TestProtocolElekta.Checked=1
+TestProtocolIBA.TestProtocolElekta.Checked=0
 TestProtocolIBA.TestProtocolElekta.Expanded=0
-TestProtocolIBA.TestProtocolAFSSAPS.Checked=1
+TestProtocolIBA.TestProtocolAFSSAPS.Checked=0
 TestProtocolIBA.TestProtocolAFSSAPS.Expanded=0
-TestProtocolIBA.TestProtocolIEC.Checked=1
+TestProtocolIBA.TestProtocolIEC.Checked=0
 TestProtocolIBA.TestProtocolIEC.Expanded=0
-TestProtocolIBA.TestProtocolDIN.Checked=1
+TestProtocolIBA.TestProtocolDIN.Checked=0
 TestProtocolIBA.TestProtocolDIN.Expanded=0
-TestProtocolIBA.TestProtocolWFF.Checked=1
+TestProtocolIBA.TestProtocolWFF.Checked=0
 TestProtocolIBA.TestProtocolWFF.Expanded=0
-TestProtocolIBA.TestProtocolFFF.Checked=1
+TestProtocolIBA.TestProtocolFFF.Checked=0
 TestProtocolIBA.TestProtocolFFF.Expanded=0
-TestProtocolPylinac.Checked=1
+TestProtocolPylinac.Checked=0
 TestProtocolPylinac.Expanded=1
-TestProtocolPylinac.TestProtocolVarian.Checked=1
+TestProtocolPylinac.TestProtocolVarian.Checked=0
 TestProtocolPylinac.TestProtocolVarian.Expanded=0
-TestProtocolPylinac.TestProtocolSiemens.Checked=1
+TestProtocolPylinac.TestProtocolSiemens.Checked=0
 TestProtocolPylinac.TestProtocolSiemens.Expanded=0
-TestProtocolPylinac.TestProtocolElekta.Checked=1
+TestProtocolPylinac.TestProtocolElekta.Checked=0
 TestProtocolPylinac.TestProtocolElekta.Expanded=0
-TestProtocolPylinac.TestProtocolWFF.Checked=1
+TestProtocolPylinac.TestProtocolWFF.Checked=0
 TestProtocolPylinac.TestProtocolWFF.Expanded=0
-TestProtocolPylinac.TestProtocolFFF.Checked=1
+TestProtocolPylinac.TestProtocolFFF.Checked=0
 TestProtocolPylinac.TestProtocolFFF.Expanded=0
-TestProtocolBistroMath.Checked=1
+TestProtocolBistroMath.Checked=0
 TestProtocolBistroMath.Expanded=1
-TestProtocolBistroMath.TestProtocolElekta.Checked=1
+TestProtocolBistroMath.TestProtocolElekta.Checked=0
 TestProtocolBistroMath.TestProtocolElekta.Expanded=0
-TestProtocolBistroMath.TestProtocolWFF.Checked=1
+TestProtocolBistroMath.TestProtocolWFF.Checked=0
 TestProtocolBistroMath.TestProtocolWFF.Expanded=0
-TestProtocolBistroMath.TestProtocolFFF.Checked=1
+TestProtocolBistroMath.TestProtocolFFF.Checked=0
 TestProtocolBistroMath.TestProtocolFFF.Expanded=0
-TestProtocolImageJ.Checked=1
+TestProtocolImageJ.Checked=0
 TestProtocolImageJ.Expanded=0
-TestProtocolImageJ.TestProtocolBrachy.Checked=1
+TestProtocolImageJ.TestProtocolBrachy.Checked=0
 TestProtocolImageJ.TestProtocolBrachy.Expanded=0
+TestMathsFuncs.Checked=0
+TestMathsFuncs.Expanded=0
+TestMathsFuncs.TestLReg.Checked=0
+TestMathsFuncs.TestLReg.Expanded=0
+TestMathsFuncs.TestILReg.Checked=0
+TestMathsFuncs.TestILReg.Expanded=0
+TestMathsFuncs.TestLinReg.Checked=0
+TestMathsFuncs.TestLinReg.Expanded=0
+TestMathsFuncs.TestMaxPosNan.Checked=0
+TestMathsFuncs.TestMaxPosNan.Expanded=0
+TestMathsFuncs.TestMaxPosNanInv.Checked=0
+TestMathsFuncs.TestMaxPosNanInv.Expanded=0
+TestMathsFuncs.TestMinPosNan.Checked=0
+TestMathsFuncs.TestMinPosNan.Expanded=0
+TestMathsFuncs.TestMinPosNanInv.Checked=0
+TestMathsFuncs.TestMinPosNanInv.Expanded=0
+TestMathsFuncs.TestHillFit.Checked=0
+TestMathsFuncs.TestHillFit.Expanded=0
+TestMathsFuncs.TestHillCoeffs.Checked=0
+TestMathsFuncs.TestHillCoeffs.Expanded=0
+TestMathsFuncs.TestInvHillFunc.Checked=0
+TestMathsFuncs.TestInvHillFunc.Expanded=0
+TestMathsFuncs.TestInflHillFunc.Checked=0
+TestMathsFuncs.TestInflHillFunc.Expanded=0
+TestMathsFuncs.TestParabolaFit.Checked=0
+TestMathsFuncs.TestParabolaFit.Expanded=0
+TestMathsFuncs.TestParabolaZero.Checked=0
+TestMathsFuncs.TestParabolaZero.Expanded=0
