--- a/beamscheme.lpi
+++ b/beamscheme.lpi
@@ -162,9 +162,8 @@
         <ComponentName Value="BSForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <IsVisibleTab Value="True"/>
-        <TopLine Value="193"/>
-        <CursorPos X="43" Y="209"/>
+        <TopLine Value="835"/>
+        <CursorPos X="81" Y="843"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -174,7 +173,7 @@
         <UnitName Value="Forms"/>
         <TopLine Value="24"/>
         <CursorPos X="22" Y="43"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit2>
       <Unit3>
         <Filename Value="imageunit.pas"/>
@@ -274,7 +273,7 @@
         <UnitName Value="FPCanvas"/>
         <TopLine Value="280"/>
         <CursorPos X="15" Y="298"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit16>
       <Unit17>
         <Filename Value="../BasicDicom/ebasic.pas"/>
@@ -688,7 +687,7 @@
         <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/cbindings/src/qobject_hook_c.cpp"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="72" Y="14"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
         <DefaultSyntaxHighlighter Value="C++"/>
       </Unit75>
       <Unit76>
@@ -790,8 +789,8 @@
         <Filename Value="source/bstypes.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="3"/>
-        <TopLine Value="1523"/>
-        <CursorPos X="15" Y="119"/>
+        <TopLine Value="1021"/>
+        <CursorPos X="52" Y="1039"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -823,7 +822,7 @@
         <Filename Value="../BeamScheme/bsunit.pas"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="72" Y="2"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit91>
       <Unit92>
         <Filename Value="/usr/share/fpcsrc/rtl/objpas/sysutils/sysutilh.inc"/>
@@ -871,8 +870,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="10"/>
-        <CursorPos Y="28"/>
+        <TopLine Value="178"/>
+        <CursorPos X="31" Y="25"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -913,9 +912,10 @@
       <Unit99>
         <Filename Value="source/param1dfuncs.pas"/>
         <UnitName Value="param1Dfuncs"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
-        <TopLine Value="635"/>
-        <CursorPos X="29" Y="660"/>
+        <TopLine Value="834"/>
+        <CursorPos X="60" Y="863"/>
         <ExtraEditorCount Value="2"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -977,7 +977,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="165"/>
         <CursorPos X="14" Y="182"/>
-        <UsageCount Value="0"/>
+        <UsageCount Value="10"/>
       </Unit105>
       <Unit106>
         <Filename Value="../../.lazarus/onlinepackagemanager/packages/lnet/lazaruspackage/lclnet.pas"/>
@@ -1071,123 +1071,127 @@
     <Build>
       <CleanOutputFileMask Value="*.ppu;*.ppl;*.o;*.or"/>
     </Build>
-    <JumpHistory Count="29" HistoryIndex="28">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="46" Column="10" TopLine="28"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="351" Column="40" TopLine="328"/>
       </Position1>
       <Position2>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="692" TopLine="670"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="144" Column="11" TopLine="126"/>
       </Position2>
       <Position3>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="692" TopLine="670"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="330"/>
       </Position3>
       <Position4>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="693" TopLine="670"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="916" Column="60" TopLine="897"/>
       </Position4>
       <Position5>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="694" TopLine="670"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="994" Column="16" TopLine="985"/>
       </Position5>
       <Position6>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="696" TopLine="670"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="325"/>
       </Position6>
       <Position7>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="697" TopLine="670"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="325"/>
       </Position7>
       <Position8>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="681" Column="34" TopLine="670"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" Column="28" TopLine="325"/>
       </Position8>
       <Position9>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="697" Column="49" TopLine="686"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="347" TopLine="325"/>
       </Position9>
       <Position10>
-        <Filename Value="source/importunit.pas"/>
-        <Caret Line="692" TopLine="679"/>
+        <Filename Value="source/bstypes.pas"/>
+        <Caret Line="348" TopLine="325"/>
       </Position10>
       <Position11>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="330"/>
+        <Caret Line="349" TopLine="325"/>
       </Position11>
       <Position12>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="330"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="1015" Column="9" TopLine="986"/>
       </Position12>
       <Position13>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="351" Column="40" TopLine="328"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="536" Column="42" TopLine="512"/>
       </Position13>
       <Position14>
         <Filename Value="source/bstypes.pas"/>
-        <Caret Line="144" Column="11" TopLine="126"/>
+        <Caret Line="1251" Column="42" TopLine="1238"/>
       </Position14>
       <Position15>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="330"/>
-      </Position15>
-      <Position16>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="916" Column="60" TopLine="897"/>
-      </Position16>
-      <Position17>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="994" Column="16" TopLine="985"/>
-      </Position17>
-      <Position18>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="325"/>
-      </Position18>
-      <Position19>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="325"/>
-      </Position19>
-      <Position20>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" Column="28" TopLine="325"/>
-      </Position20>
-      <Position21>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="325"/>
-      </Position21>
-      <Position22>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="348" TopLine="325"/>
-      </Position22>
-      <Position23>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="349" TopLine="325"/>
-      </Position23>
-      <Position24>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1015" Column="9" TopLine="986"/>
-      </Position24>
-      <Position25>
-        <Filename Value="source/param1dfuncs.pas"/>
-        <Caret Line="536" Column="42" TopLine="512"/>
-      </Position25>
-      <Position26>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="1251" Column="42" TopLine="1238"/>
-      </Position26>
-      <Position27>
         <Filename Value="beamscheme.lpr"/>
         <Caret Line="18" Column="21"/>
-      </Position27>
-      <Position28>
+      </Position15>
+      <Position16>
         <Filename Value="source/settingsunit.pas"/>
         <Caret Line="282" TopLine="248"/>
-      </Position28>
-      <Position29>
+      </Position16>
+      <Position17>
         <Filename Value="source/settingsunit.pas"/>
         <Caret Line="28" TopLine="13"/>
+      </Position17>
+      <Position18>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="767" TopLine="435"/>
+      </Position18>
+      <Position19>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="644" TopLine="621"/>
+      </Position19>
+      <Position20>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="108" TopLine="102"/>
+      </Position20>
+      <Position21>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="230" Column="19" TopLine="211"/>
+      </Position21>
+      <Position22>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="162" Column="52" TopLine="133"/>
+      </Position22>
+      <Position23>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="314" Column="22" TopLine="281"/>
+      </Position23>
+      <Position24>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="296" Column="30" TopLine="288"/>
+      </Position24>
+      <Position25>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="645" TopLine="592"/>
+      </Position25>
+      <Position26>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="25" Column="17" TopLine="7"/>
+      </Position26>
+      <Position27>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="859" TopLine="832"/>
+      </Position27>
+      <Position28>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="861" Column="4" TopLine="832"/>
+      </Position28>
+      <Position29>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="851" Column="32" TopLine="832"/>
       </Position29>
+      <Position30>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="863" Column="56" TopLine="834"/>
+      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
