--- a/beamscheme.lpi
+++ b/beamscheme.lpi
@@ -14,7 +14,8 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="123"/>
+      <MinorVersionNr Value="1"/>
+      <BuildNr Value="125"/>
       <Attributes pvaPreRelease="True"/>
       <StringTable CompanyName="Yenzakahle Medical Physics Inc"/>
     </VersionInfo>
@@ -162,8 +163,9 @@
         <ComponentName Value="BSForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <TopLine Value="835"/>
-        <CursorPos X="81" Y="843"/>
+        <IsVisibleTab Value="True"/>
+        <TopLine Value="164"/>
+        <CursorPos X="57" Y="185"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -870,8 +872,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="4"/>
-        <TopLine Value="178"/>
-        <CursorPos X="31" Y="25"/>
+        <TopLine Value="52"/>
+        <CursorPos X="39" Y="69"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -912,7 +914,6 @@
       <Unit99>
         <Filename Value="source/param1dfuncs.pas"/>
         <UnitName Value="param1Dfuncs"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
         <TopLine Value="834"/>
         <CursorPos X="60" Y="863"/>
@@ -1073,124 +1074,124 @@
     </Build>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="351" Column="40" TopLine="328"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="282" TopLine="248"/>
       </Position1>
       <Position2>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="144" Column="11" TopLine="126"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="28" TopLine="13"/>
       </Position2>
       <Position3>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="330"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="767" TopLine="435"/>
       </Position3>
       <Position4>
         <Filename Value="source/bsunit.pas"/>
-        <Caret Line="916" Column="60" TopLine="897"/>
+        <Caret Line="644" TopLine="621"/>
       </Position4>
       <Position5>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="994" Column="16" TopLine="985"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="108" TopLine="102"/>
       </Position5>
       <Position6>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="325"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="230" Column="19" TopLine="211"/>
       </Position6>
       <Position7>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="325"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="162" Column="52" TopLine="133"/>
       </Position7>
       <Position8>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" Column="28" TopLine="325"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="314" Column="22" TopLine="281"/>
       </Position8>
       <Position9>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="347" TopLine="325"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="296" Column="30" TopLine="288"/>
       </Position9>
       <Position10>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="348" TopLine="325"/>
+        <Filename Value="source/bsunit.pas"/>
+        <Caret Line="645" TopLine="592"/>
       </Position10>
       <Position11>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="349" TopLine="325"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="25" Column="17" TopLine="7"/>
       </Position11>
       <Position12>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1015" Column="9" TopLine="986"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="859" TopLine="832"/>
       </Position12>
       <Position13>
         <Filename Value="source/param1dfuncs.pas"/>
-        <Caret Line="536" Column="42" TopLine="512"/>
+        <Caret Line="861" Column="4" TopLine="832"/>
       </Position13>
       <Position14>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="1251" Column="42" TopLine="1238"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="851" Column="32" TopLine="832"/>
       </Position14>
       <Position15>
-        <Filename Value="beamscheme.lpr"/>
-        <Caret Line="18" Column="21"/>
+        <Filename Value="source/param1dfuncs.pas"/>
+        <Caret Line="863" Column="56" TopLine="834"/>
       </Position15>
       <Position16>
         <Filename Value="source/settingsunit.pas"/>
-        <Caret Line="282" TopLine="248"/>
+        <Caret Line="62" TopLine="56"/>
       </Position16>
       <Position17>
         <Filename Value="source/settingsunit.pas"/>
-        <Caret Line="28" TopLine="13"/>
+        <Caret Line="63" TopLine="56"/>
       </Position17>
       <Position18>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="767" TopLine="435"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="101" Column="29" TopLine="91"/>
       </Position18>
       <Position19>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="644" TopLine="621"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="62" TopLine="56"/>
       </Position19>
       <Position20>
         <Filename Value="source/settingsunit.pas"/>
-        <Caret Line="108" TopLine="102"/>
+        <Caret Line="63" TopLine="56"/>
       </Position20>
       <Position21>
         <Filename Value="source/settingsunit.pas"/>
-        <Caret Line="230" Column="19" TopLine="211"/>
+        <Caret Line="64" TopLine="56"/>
       </Position21>
       <Position22>
         <Filename Value="source/settingsunit.pas"/>
-        <Caret Line="162" Column="52" TopLine="133"/>
+        <Caret Line="80" Column="30" TopLine="68"/>
       </Position22>
       <Position23>
         <Filename Value="source/settingsunit.pas"/>
-        <Caret Line="314" Column="22" TopLine="281"/>
+        <Caret Line="63" TopLine="46"/>
       </Position23>
       <Position24>
         <Filename Value="source/settingsunit.pas"/>
-        <Caret Line="296" Column="30" TopLine="288"/>
+        <Caret Line="64" TopLine="46"/>
       </Position24>
       <Position25>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="645" TopLine="592"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="74" TopLine="46"/>
       </Position25>
       <Position26>
         <Filename Value="source/settingsunit.pas"/>
-        <Caret Line="25" Column="17" TopLine="7"/>
+        <Caret Line="75" TopLine="47"/>
       </Position26>
       <Position27>
-        <Filename Value="source/param1dfuncs.pas"/>
-        <Caret Line="859" TopLine="832"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="76" TopLine="48"/>
       </Position27>
       <Position28>
-        <Filename Value="source/param1dfuncs.pas"/>
-        <Caret Line="861" Column="4" TopLine="832"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="77" TopLine="49"/>
       </Position28>
       <Position29>
-        <Filename Value="source/param1dfuncs.pas"/>
-        <Caret Line="851" Column="32" TopLine="832"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="78" TopLine="50"/>
       </Position29>
       <Position30>
-        <Filename Value="source/param1dfuncs.pas"/>
-        <Caret Line="863" Column="56" TopLine="834"/>
+        <Filename Value="source/settingsunit.pas"/>
+        <Caret Line="79" TopLine="51"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
